public/css/style.css
/* ... */
button.conv-checkbox-clear {
    display: none;
}
.viewer-badge {
    color: #fecb5a;
    border-top: 0 solid transparent;
    border-bottom: 12px solid transparent;
    border-left: 12px solid;
    left: 0;
    top: 0;
    position: absolute;
    width: 0;
    height: 0;
}
.viewer-badge.viewer-replying {
    color: #d85552;
}
@media (max-width:1000px) {
    /**
     * Make conversations table responsive
     */
    .table-conversations {
        display: block;
    }
    .table-conversations thead {
        border: none;
        clip: rect(0 0 0 0);
        height: 1px;
        margin: -1px;
        overflow: hidden;
        padding: 0;
        position: absolute;
        width: 1px;
    }
    .table.table-conversations td,
    .table.table-conversations tr,
    .table.table-conversations tbody,
    .table.table-conversations tfoot {
        display: block;
        width: 100%;
        border: 0;

        -webkit-touch-callout:none;
        -webkit-user-select:none;
        -khtml-user-select:none;
        -moz-user-select:none;
        -ms-user-select:none;
        user-select:none;
    }

    .table.table-conversations tr.selected {
        background-color: #e5effb;
    }
    .table-conversations tr.selected .conv-fader {
        background: linear-gradient(to right,rgba(255,255,255,0), #e5effb);
    }

    .table.table-conversations tbody td {
        border: 0;
    }
    .table.table-conversations tbody tr {
        position: relative;
        height: 80px;
        border-bottom: 1px solid #e3e8eb;
    }
    .table.table-conversations.show-mailbox tbody tr {
        height: 97px;
    }

    .table-conversations .conv-attachment-mobile
    {
        display: inline;
    }

    .conv-cb {
        display: none !important;
    }
    .conv-attachment {
        display: none !important;
    }
    .conv-subject {
        position: absolute !important;
        top: 24px;
        padding-left: 2px!important;
        padding-right: 20px!important;
    }
    .table-conversations .conv-fader {
        width: 80px;
    }
    .conv-owner {
        display: none!important;
    }
    .conv-owner-mobile {
        display: inline!important;
    }
    .conv-owner-mobile .glyphicon {
        top: 0;
    }
    .conv-customer {
        position: absolute;
        top: 0;
        margin-left: 10px!important;
    }
    .conv-customer a {
        width: 350px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
    .conv-customer a,
    .conv-date a {
        padding: 11px 8px 0 0 !important;
        line-height: 1.2em;
    }
    .table-conversations td.conv-subject a {
        padding-left: 8px;
    }
    .conv-date a {
        padding-top: 13px!important;
        font-size: 12px!important;
        background-color: transparent!important;
        font-weight: normal;
    }
    .conv-counter {
        border: 1px solid #d6dde3;
        background: #f8f9f9;
        top: -1px;
        font-size: 10px;
        padding: 0 3px;
    }
    /*.conv-subject-number {
        display: inline;
    }*/
    .conv-number {
        display: none!important;
    }
    .conv-attachment {
        position: absolute;
        left: 7px;
        top: 24px;
        text-align: center;
        width: 25px!important;
    }
    .conv-date {
        width: 50%;
        position: absolute;
        top: 0;
        right: 0;
        text-align: right;
    }
    .conv-email {
        display: none;
    }
    .conv-thread-count {
        position: absolute;
        right: 0;
        top: 30px;
        z-index: 999;
        text-align: right;
        width: auto !important;
    }
    .conv-thread-count a,
    .conv-thread-count .conv-star {
        padding-right: 6px!important;
    }
    .table.table-conversations tfoot tr {
        display: block;
        position: relative;
        height: 32px;
    }
    .conv-totals {
        line-height: 31px!important;
    }
    .conv-totals {
        position: absolute;
        left: 0;
        text-align: left;
    }
    .conv-nav {
        position: absolute;
        right: 0;
    }

    button.conv-checkbox-clear {
        display: block;
    }
}
@media (max-width:700px) {
    .conv-customer a {
        width: 250px;
    }
}

/**
 * Conversation
 */
.body-conv .content-2col {
    display: flex;
    /*flex-wrap: wrap;*/
}
#conv-layout {
    position: relative;
    width: 100%;
}
#conv-layout-header {
    float: left;
    width: 100%;
    padding-right: 280px;
}
#conv-layout-main {
    float: left;
    width: 100%;
    padding-right: 280px;
}
#conv-layout-customer {
    box-shadow: -1px 0 0 #d6dde3, 1px 0 0 #d6dde3, 0 1px 0 #d6dde3;
    position: absolute;
    right: 0;
    /*background-color: #f4f5f5;*/
    /*background-color: #eff6fc;*/
    background-color: #fff;
    width: 280px;
    height: 100%;
    z-index: 9;
}
#conv-toolbar {
    background-color: #deecf9;
    /*border-bottom: 1px solid #e3e8eb;*/
    padding-left: 9px;
}
.conv-actions .conv-action {
    display: inline-block;
    padding: 16px 16px 9px;
    /*color: #4f5d69;*/
    color: #005a9e;
    font-size: 19px;
    cursor: pointer;
}
.conv-actions .conv-action:hover {
    /*color: #394956;*/
    color: #0078d7;
}
.conv-action.inactive {
    color: #aeb6c0;
}
.conv-action.dropdown {
    padding: 0!important;
}
.conv-action .dropdown-toggle {
    font-size: 17px;
    padding-left: 13px;
}
#conv-subject {
    border-bottom: 1px solid #e3e8eb;
}
.conv-subj-block {
    padding: 16px 9px 18px 20px;
}
.conv-following .conv-subjtext > span:before {
    content: "🔔 ";
    font-size: 15px;
    position: relative;
    top: -3px;
}
.conv-top-block {
    border-top: 1px solid #e3e8eb;
    padding: 10px 20px;
}
.action-visible .conv-top-block + .conv-action-wrapper .conv-action-block {
    margin-top: 0;
    padding-top: 15px;
}
.action-visible .conv-top-block + .conv-action-wrapper {
    border-top: 1px solid #e3e8eb;
}
/* ... */

